@@ -10,40 +10,17 @@
 package org.elasticsearch.benchmark.vector.scorer;
 
 import org.apache.lucene.store.Directory;
-import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.IndexInput;
-import org.apache.lucene.store.MMapDirectory;
-import org.apache.lucene.util.hnsw.RandomVectorScorer;
 import org.apache.lucene.util.hnsw.UpdateableRandomVectorScorer;
 import org.apache.lucene.util.quantization.QuantizedByteVectorValues;
-import org.elasticsearch.common.logging.LogConfigurator;
-import org.elasticsearch.core.IOUtils;
-import org.elasticsearch.logging.LogManager;
-import org.elasticsearch.logging.Logger;
 import org.elasticsearch.simdvec.VectorScorerFactory;
 import org.elasticsearch.simdvec.VectorSimilarityType;
-import org.openjdk.jmh.annotations.Benchmark;
-import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Fork;
-import org.openjdk.jmh.annotations.Measurement;
-import org.openjdk.jmh.annotations.Mode;
-import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.Param;
-import org.openjdk.jmh.annotations.Scope;
 import org.openjdk.jmh.annotations.Setup;
-import org.openjdk.jmh.annotations.State;
-import org.openjdk.jmh.annotations.TearDown;
-import org.openjdk.jmh.annotations.Warmup;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.Collections;
-import java.util.List;
+import java.util.Random;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import static org.elasticsearch.benchmark.vector.scorer.BenchmarkUtils.getScorerFactoryOrDie;
 import static org.elasticsearch.benchmark.vector.scorer.BenchmarkUtils.luceneScoreSupplier;
@@ -52,50 +29,19 @@ import static org.elasticsearch.benchmark.vector.scorer.BenchmarkUtils.quantized
 import static org.elasticsearch.benchmark.vector.scorer.BenchmarkUtils.randomInt7BytesBetween;
 import static org.elasticsearch.benchmark.vector.scorer.BenchmarkUtils.supportsHeapSegments;
 import static org.elasticsearch.benchmark.vector.scorer.BenchmarkUtils.writeInt7VectorData;
-import static org.elasticsearch.benchmark.vector.scorer.ScalarOperations.dotProduct;
-import static org.elasticsearch.benchmark.vector.scorer.ScalarOperations.squareDistance;
+import static org.elasticsearch.nativeaccess.jdk.ScalarOperations.dotProduct;
+import static org.elasticsearch.nativeaccess.jdk.ScalarOperations.squareDistance;
 
-/**
- * Benchmark that compares bulk scoring of various scalar quantized vector similarity function
- * implementations (scalar, lucene's panama-ized, and Elasticsearch's native) against sequential
- * and random access target vectors.
- * Run with ./gradlew -p benchmarks run --args 'VectorScorerInt7uBulkScorerBenchmark'
- */
-@Fork(value = 1, jvmArgsPrepend = { "--add-modules=jdk.incubator.vector" })
-@Warmup(iterations = 3, time = 3)
-@Measurement(iterations = 5, time = 3)
-@BenchmarkMode(Mode.Throughput)
-@OutputTimeUnit(TimeUnit.SECONDS)
-@State(Scope.Thread)
-public class VectorScorerInt7uBulkBenchmark {
+public class VectorScorerInt7uBulkBenchmark extends VectorScorerBulkBenchmark {
 
-    static {
-        LogConfigurator.configureESLogging(); // native access requires logging to be initialized
-        if (supportsHeapSegments() == false) {
-            final Logger LOG = LogManager.getLogger(VectorScorerInt7uBulkBenchmark.class);
-            LOG.warn("*Query targets cannot run on " + "JDK " + Runtime.version());
-        }
-    }
-
-    @Param({ "1024" })
-    public int dims;
-
-    // 128k is typically enough to not fit in L1 (core) cache for most processors;
-    // 1.5M is typically enough to not fit in L2 (core) cache;
-    // 130M is enough to not fit in L3 cache
     @Param({ "128", "1500", "130000" })
     public int numVectors;
-    public int numVectorsToScore;
 
     @Param
     public VectorImplementation implementation;
 
     @Param({ "DOT_PRODUCT", "EUCLIDEAN" })
     public VectorSimilarityType function;
-
-    private Path path;
-    private Directory dir;
-    private IndexInput in;
 
     private static class ScalarDotProduct implements UpdateableRandomVectorScorer {
         private final QuantizedByteVectorValues values;
@@ -113,7 +59,7 @@ public class VectorScorerInt7uBulkBenchmark {
         public float score(int ordinal) throws IOException {
             var vec2 = values.vectorValue(ordinal);
             var vec2CorrectionConstant = values.getScoreCorrectionConstant(ordinal);
-            int dotProduct = dotProduct(queryVector, vec2);
+            float dotProduct = dotProduct(queryVector, vec2);
             float adjustedDistance = dotProduct * scoreCorrectionConstant + queryVectorCorrectionConstant + vec2CorrectionConstant;
             return (1 + adjustedDistance) / 2;
         }
@@ -144,7 +90,7 @@ public class VectorScorerInt7uBulkBenchmark {
         @Override
         public float score(int ordinal) throws IOException {
             var vec2 = values.vectorValue(ordinal);
-            int squareDistance = squareDistance(queryVector, vec2);
+            float squareDistance = squareDistance(queryVector, vec2);
             float adjustedDistance = squareDistance * scoreCorrectionConstant;
             return 1 / (1f + adjustedDistance);
         }
@@ -160,65 +106,43 @@ public class VectorScorerInt7uBulkBenchmark {
         }
     }
 
-    private float[] scores;
-    private int[] ordinals;
-    private int[] ids;
-
-    private UpdateableRandomVectorScorer scorer;
-    private RandomVectorScorer queryScorer;
-
-    static class VectorData {
-        private final int numVectorsToScore;
+    static class VectorData extends VectorScorerBulkBenchmark.VectorData {
         private final byte[][] vectorData;
         private final float[] offsets;
-        private final int[] ordinals;
-        private final int targetOrd;
         private final float[] queryVector;
 
-        VectorData(int dims, int numVectors, int numVectorsToScore) {
-            this.numVectorsToScore = numVectorsToScore;
+        VectorData(int dims, int numVectors, int numVectorsToScore, Random random) {
+            super(numVectors, numVectorsToScore, random);
+
             vectorData = new byte[numVectors][];
             offsets = new float[numVectors];
-
-            ThreadLocalRandom random = ThreadLocalRandom.current();
             for (int v = 0; v < numVectors; v++) {
                 vectorData[v] = new byte[dims];
                 randomInt7BytesBetween(vectorData[v]);
                 offsets[v] = random.nextFloat();
             }
 
-            List<Integer> list = IntStream.range(0, numVectors).boxed().collect(Collectors.toList());
-            Collections.shuffle(list, random);
-            ordinals = list.stream().limit(numVectorsToScore).mapToInt(Integer::intValue).toArray();
+            queryVector = randomFloatArray(random, dims);
+        }
 
-            targetOrd = random.nextInt(numVectors);
-
-            queryVector = new float[dims];
-            for (int i = 0; i < dims; i++) {
-                queryVector[i] = random.nextFloat();
-            }
+        @Override
+        void writeVectorData(Directory directory) throws IOException {
+            writeInt7VectorData(directory, vectorData, offsets);
         }
     }
 
     @Setup
     public void setup() throws IOException {
-        setup(new VectorData(dims, numVectors, Math.min(numVectors, 20_000)));
+        setup(new VectorData(dims, numVectors, Math.min(numVectors, 20_000), ThreadLocalRandom.current()));
     }
 
     void setup(VectorData vectorData) throws IOException {
+        setup(vectorData, numVectors);
+    }
+
+    @Override
+    void createScorers(IndexInput in, VectorScorerBulkBenchmark.VectorData vectorData) throws IOException {
         VectorScorerFactory factory = getScorerFactoryOrDie();
-
-        path = Files.createTempDirectory("Int7uBulkScorerBenchmark");
-        dir = new MMapDirectory(path);
-        writeInt7VectorData(dir, vectorData.vectorData, vectorData.offsets);
-
-        numVectorsToScore = vectorData.numVectorsToScore;
-        scores = new float[numVectorsToScore];
-        ids = IntStream.range(0, numVectors).toArray();
-        ordinals = vectorData.ordinals;
-
-        in = dir.openInput("vector.data", IOContext.DEFAULT);
-
         var values = quantizedVectorValues(dims, numVectors, in, function.function());
         float scoreCorrectionConstant = values.getScalarQuantizer().getConstantMultiplier();
 
@@ -233,65 +157,16 @@ public class VectorScorerInt7uBulkBenchmark {
             case LUCENE:
                 scorer = luceneScoreSupplier(values, function.function()).scorer();
                 if (supportsHeapSegments()) {
-                    queryScorer = luceneScorer(values, function.function(), vectorData.queryVector);
+                    queryScorer = luceneScorer(values, function.function(), ((VectorData) vectorData).queryVector);
                 }
                 break;
             case NATIVE:
                 scorer = factory.getInt7SQVectorScorerSupplier(function, in, values, scoreCorrectionConstant).orElseThrow().scorer();
                 if (supportsHeapSegments()) {
-                    queryScorer = factory.getInt7SQVectorScorer(function.function(), values, vectorData.queryVector).orElseThrow();
+                    queryScorer = factory.getInt7SQVectorScorer(function.function(), values, ((VectorData) vectorData).queryVector)
+                        .orElseThrow();
                 }
                 break;
         }
-
-        scorer.setScoringOrdinal(vectorData.targetOrd);
-    }
-
-    @TearDown
-    public void teardown() throws IOException {
-        IOUtils.close(in, dir);
-        IOUtils.rm(path);
-    }
-
-    @Benchmark
-    public float[] scoreMultipleSequential() throws IOException {
-        for (int v = 0; v < numVectorsToScore; v++) {
-            scores[v] = scorer.score(v);
-        }
-        return scores;
-    }
-
-    @Benchmark
-    public float[] scoreMultipleRandom() throws IOException {
-        for (int v = 0; v < numVectorsToScore; v++) {
-            scores[v] = scorer.score(ordinals[v]);
-        }
-        return scores;
-    }
-
-    @Benchmark
-    public float[] scoreQueryMultipleRandom() throws IOException {
-        for (int v = 0; v < numVectorsToScore; v++) {
-            scores[v] = queryScorer.score(ordinals[v]);
-        }
-        return scores;
-    }
-
-    @Benchmark
-    public float[] scoreMultipleSequentialBulk() throws IOException {
-        scorer.bulkScore(ids, scores, ordinals.length);
-        return scores;
-    }
-
-    @Benchmark
-    public float[] scoreMultipleRandomBulk() throws IOException {
-        scorer.bulkScore(ordinals, scores, ordinals.length);
-        return scores;
-    }
-
-    @Benchmark
-    public float[] scoreQueryMultipleRandomBulk() throws IOException {
-        queryScorer.bulkScore(ordinals, scores, ordinals.length);
-        return scores;
     }
 }
